--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,29 @@
 language: c
 
-services:
-  - docker
+sudo: true
+
+#Cache devkitARM and doxygen
+cache:
+  directories:
+    - /home/travis/devkitPro
 
 before_install:
-  - docker pull yesimnathan/switchdev
+  - wget https://github.com/devkitPro/pacman/releases/download/devkitpro-pacman-1.0.1/devkitpro-pacman.deb
+  - sudo dpkg -i devkitpro-pacman.deb
+
+install:
+  - sudo dkp-pacman -Syu switch-dev --noconfirm --needed
+  - sudo dkp-pacman -S switch-sdl2 --noconfirm
+  - sudo dkp-pacman -S switch-sdl2_gfx --noconfirm
+  - sudo dkp-pacman -S switch-sdl2_image --noconfirm
+  - sudo dkp-pacman -S switch-sdl2_mixer --noconfirm
+  - sudo dkp-pacman -S switch-sdl2_ttf --noconfirm
+  - sudo dkp-pacman -S switch-libdrm_nouveau --noconfirm
+  - sudo dkp-pacman -S switch-libconfig --noconfirm
+  - sudo dkp-pacman -S switch-glad --noconfirm
+  - sudo dkp-pacman -S switch-glm  --noconfirm
+  - sudo dkp-pacman -S switch-libopus  --noconfirm
+  - source /etc/profile.d/devkit-env.sh
+
+script:
+  - sh .travis/.build.sh
