--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,7 +9,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: make mupdf
+    - name: install dep
+      run: wget https://github.com/devkitPro/pacman/releases/download/devkitpro-pacman-1.0.1/devkitpro-pacman.deb && sudo dpkg -i devkitpro-pacman.deb && sudo dkp-pacman -Syu switch-dev switch-sdl2 switch-sdl2_gfx switch-sdl2_image switch-sdl2_mixer switch-sdl2_ttf switch-libdrm_nouveau switch-libconfig switch-glad switch-glm switch-libopus --noconfirm --needed && source /etc/profile.d/devkit-env.sh
+    - name: update
+      run: sudo apt-get update && sudo apt-get -y install build-essential && source /etc/profile.d/devkit-env.sh && export DEVKITA64=/opt/devkitpro/devkitA64
+    - name: make lib
       run: cd libs && make -f Makefile.mupdf && cd ..
-    - name: make
-      run: make
+    - name: make project
+      run: make 
